# paracle

./: .clinerules  .cursorrules  .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  .windsurfrules  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRAMEWORK_ANALYSIS_REPORT.md  MANIFEST.in  MCP-DIAGNOSTICS-IMPLEMENTATION.md  METRICS_TESTS_SUMMARY.md  Makefile  PYPI_PUBLISH_GUIDE.md  PYPI_SETUP.md  README.md  SECURITY.md  WHERE_TO_PUT_FILES.md  bandit_report.json  mkdocs.yml  pyproject.toml  test-results.xml  test_fixture_addition.txt
.benchmarks/: baseline.json  results.json
.claude/: CLAUDE.md  README.md  settings.json  settings.local.json
.claude/agents/: architect.md  coder.md  documenter.md  releasemanager.md  reviewer.md  security.md  tester.md
.claude/legacy/: code_snippets.md  custom_instructions.md  project_context.md  prompts.md
.claude/rules/: anti-hallucination.md  architecture.md  code-style.md  framework-design.md  multi-perspective.md  parac-governance.md  session-protocol.md  testing.md
.codex/: AGENTS.md
.config/: mcp_config.json
.github/: COPILOT_INSTRUCTIONS  copilot-coding-agent.yml  copilot-config.json  copilot-instructions.md  dependabot.yml  dependency-check-suppressions.xml
.github/agents/: README.md  architect.agent.md  coder.agent.md  documentation-writer.md  documenter.agent.md  framework-architect.md  pm.agent.md  releasemanager.agent.md  reviewer.agent.md  security.agent.md  tester.agent.md  user-manual-writer.agent.md
.github/instructions/: agents.md  ai-instructions-architecture.md  dogfooding-clarification.md  parac-agents-mapping.md
.github/workflows/: agent-workflows.json  benchmark.yml  ci.yml  claude-code.yml  docker-publish.yml  governance.yml  maintain-parac.yml  release.yml  security-scan.yml  security.yml  test.yml
.parac/: .gitignore  ARCHITECTURE_VISUAL.md  DOGFOODING_SEPARATION.md  GOVERNANCE.md  GOVERNANCE_IMPROVEMENTS.md  IDE_INSTRUCTIONS_IMPROVEMENTS.md  PHASE0_COMPLETE.md  PRE_FLIGHT_CHECKLIST.md  STRUCTURE.md  TEMPLATE_UPDATES.md  UNIVERSAL_AI_INSTRUCTIONS.md  USING_PARAC.md  VALIDATION_SUCCESS.md  changelog.md  manifest.yaml  project-LEGACY.yaml  project.yaml
.parac/adapters/: languages.yaml  model_providers.yaml  orchestrators.yaml
.parac/agents/: SKILL_ASSIGNMENTS.md  manifest.yaml
.parac/compliance/: QUICK_REFERENCE.md  README.md
.parac/config/: README.md  ai.yaml
.parac/hooks/: README.md  install-hooks.ps1  install-hooks.sh  pre-commit  session-checkpoint.py
.parac/integrations/: README.md
.parac/logs/: .gitignore  README.md
.parac/memory/: index.yaml
.parac/policies/: FILE_ORGANIZATION.md  GIT_WORKFLOW.md  LOG_MANAGEMENT.md  OWASP_COMPLIANCE.md  SECURITY.md  approvals.yaml  policy-pack.yaml  security.yaml
.parac/roadmap/: GOVERNANCE_ENFORCEMENT_DESIGN.md  PHASE9_PROGRESS_REPORT.md  constraints.yaml  decisions.md  phase_10_specification.md  phase_6_specification.md  roadmap.yaml  strategic_review_q1_2026.md
.parac/runs/: README.md
.parac/tools/: README.md  auto-maintain.py  registry.yaml
.parac/workflows/: README.md  WORKFLOWS.md  catalog.yaml
.roadmap/: ROADMAP_GLOBALE.yaml
content/docs/: DOCUMENTATION_REVIEW_REPORT.md  OVERVIEW.md  PERFORMANCE_TEST_RESULTS.md  PRODUCTION_READINESS_REPORT.md  README.md  api-first-cli.md  (+30 more)
docker/: .dockerignore  .env.example  DOCKER_UPDATE_SUMMARY.md  Dockerfile.api  Dockerfile.dev  Dockerfile.mcp  Dockerfile.sandbox  Dockerfile.worker  PUBLISH_IMAGES.md  README.md  README.sandbox.md  docker-compose.dev.yaml  docker-compose.sandbox.yaml  docker-compose.yaml
docs/: agent-discovery.md  agent-execution-model.md  agent-execution-quickref.md  agent-run-quickref.md  ai-checklist.md  ai-instructions.md  api-first-migration.md  api-first-refactoring-summary.md  api-reference.md  architecture.md  builtin-tools.md  cli-reference.md  execution-modes-api-summary.md  execution-modes.md  file-locking-implementation.md  getting-started.md  ide-integration.md  index.md  log-management.md  mcp-capability-coverage.md  mcp-full-coverage.md  mcp-integration.md  mcp-quick-reference.md  performance-benchmarking-guide.md  providers.md  quickstart.md  roadmap-state-sync.md  security-audit-report.md  skills.md  sync-architecture.md  sync-quickref.md  sync-summary.md  synchronization-guide.md  test-github-agents-workflows.md  test-results.md  test-success-report.md  workflow-guide.md  yolo-mode-design.md  yolo-mode-quickstart.md
examples/: 03_shell_tools.py  05_tool_registry.py  07_multi_provider.py  09_sandbox_execution.py  13_phase5_integration.py  14_agent_skills.py  21_git_workflows.py  21_precommit_hook.py  22_continuous_monitoring.py  PHASE5_EXAMPLES.md  README.md
scripts/: README-MCP-FIX.md  README.md  baseline_profiling.py  bump-version.ps1  bump-version.sh  bump_version.py  clean-install-mcp.ps1  create_icon.py  fix_security_tests.py  fix_tool_init.py  generate_changelog.py  git_commit_automation.py  log-action.ps1  log-action.py  log-action.sh  mcp-server.ps1  mcp-server.sh  releasemanager_commit.py  run-owasp-scan.ps1  run-owasp-scan.sh  stop-mcp-processes.ps1  stop-mcp-processes.sh
templates/: README.md
tests/: conftest.py  test_ai_generation.py  test_config_commands.py  test_config_includes.py  test_includes_quick.py  test_transport.py
(+673 files in other folders)
